# VideoSummary

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile-basic  LICENSE  README.md  docker-compose.yml  eslint.config.js  index.html  package-lock.json  package.json  pyproject.toml  settings.json.example  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.github/workflows/: deploy-docs.yml
app/: config.py
app/api/: auto_pipeline.py  config.py  dependencies.py  limits.py  main.py  persistence.py  schemas.py  settings.py  uploads.py  worker.py
app/cache/: __init__.py  bundle.py  cache_key.py  cache_service.py  gc.py
app/core/: constant.py  entities.py  profile.py  task_factory.py
app/pipeline/: __init__.py  condition.py  context.py  graph.py  limits.py  node_base.py  registry.py  runner.py
app/thread/: batch_process_thread.py  file_download_thread.py  modelscope_download_thread.py  subtitle_pipeline_thread.py  subtitle_thread.py  transcript_thread.py  version_checker_thread.py  video_download_thread.py  video_info_thread.py  video_synthesis_thread.py
docs/: README.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.mts
docs/api/: pipeline-framework.md
docs/config/: asr.md  cookies.md  llm.md  translator.md
docs/demand/: 整体需求.md
docs/design/: portal-dual-mode.md
docs/dev/: api-frontend.md  api.md  architecture.md  asr-chunk-merger.md  asr-chunked-usage.md  contributing.md  pipeline-framework.md  pipeline-testing.md  translate-module.md  upload-storage.md  url-subtitle-summary-testing.md
docs/guide/: configuration.md  cookies-config.md  faq.md  getting-started.md  llm-config.md  quick-example.md  workflow.md
docs/legacy-docs/: Old_README.md
docs/plan/: backend-progress.md  backend-refactor.md  cache-redesign.md  no-dag-refactor.md
resource/subtitle_style/: default.json  default.txt
scripts/: lint.sh
src/: App.tsx  vite-env.d.ts
src/api/: client.ts  execution.ts  index.ts  pipeline.ts  summaries.ts  upload.ts
src/components/: index.ts
src/config/: app.ts  history.ts  index.ts  runtime.ts  theme.ts
src/features/: index.ts
src/hooks/: index.ts  usePipelineExecution.ts  usePolling.ts  useSummaryJob.ts
src/stores/: executionStore.ts  historyStore.ts  index.ts  settingsStore.ts
src/styles/: antd-overrides.css  variables.css
src/types/: api.ts  history.ts  index.ts  pipeline.ts  summary.ts  upload.ts
src/utils/: cookie.ts  formatters.ts  index.ts  validators.ts
tests/: .env.example  README.md  __init__.py  conftest.py
tests/fixtures/: README.md
tests/test_api/: __init__.py  test_api_uploads.py  test_uploads.py
tests/test_asr/: README.md  conftest.py  test_asr_data.py  test_bcut_asr.py  test_chunk_merger.py  test_chunked_asr.py  test_chunking.py  test_jianying_asr.py  test_whisper_api_asr.py
tests/test_optimize/: test_optimize.py
tests/test_pipeline/: __init__.py  conftest.py  test_nodes.py  test_pipeline_run.py
tests/test_split/: test_alignment.py  test_split.py  test_split_by_llm.py  (+2 more)
web/: .env.development  .env.production  .gitignore  FRONTEND_README.md  package-lock.json  tsconfig.node.json
(+162 files in other folders)
